<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

<androidx.cardview.widget.CardView
    android:layout_width="328dp"
    android:layout_height="433dp"
    android:layout_marginBottom="40dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardElevation="8dp"
    app:cardCornerRadius="30dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_light"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/text1"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/alreadyUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="85dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/already_an_user"
                android:textColor="@color/text1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/alreadyUser"
                android:fontFamily="@font/lato_bold"
                android:text="@string/log_in"
                android:textColor="@color/text2"
                android:layout_marginStart="5dp"
                />



        </RelativeLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/email"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signUp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:fontFamily="@font/lato_bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/signup_btn_bkg"
            android:textAllCaps="false"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <View
                android:id="@+id/left_line"
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="5dp"
                android:background="@color/brand_colour" />

            <TextView
                android:id="@+id/login_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/left_line"
                android:fontFamily="@font/lato"
                android:text="@string/or_log_in_with"
                android:textColor="@color/text1" />

            <View
                android:id="@+id/right_line"
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:layout_marginEnd="30dp"
                android:background="@color/brand_colour"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/login_with"
                android:layout_marginStart="5dp"
                />
        </RelativeLayout>



    </LinearLayout>
</androidx.cardview.widget.CardView>

<ImageView
    android:layout_width="326dp"
    android:layout_height="257dp"
    android:src="@drawable/pattern_blue"
    android:layout_marginStart="-225dp"
    android:layout_marginTop="80dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

<ImageView
    android:layout_width="326dp"
    android:layout_height="246dp"
    android:layout_marginEnd="-165dp"
    android:layout_marginBottom="-80dp"
    android:src="@drawable/pattern_blue"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>