<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragment.account.AccountFragment">

    <TextView
        android:id="@+id/account_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_settings"
        android:textColor="@color/brand_colour"
        android:textAllCaps="true"
        android:fontFamily="@font/lato_bold"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/profile_layout"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toTopOf="@id/profile_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_setting"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/profile_layout_bkg"
        android:elevation="4dp"

        >

        <ImageView
            android:id="@+id/profile_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_img"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/profile_img"
            android:fontFamily="@font/lato_bold"
            android:text="@string/ashok_sharma"
            android:textColor="@color/brand_colour"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/profile_img"
            android:fontFamily="@font/lato"
            android:text="@string/ashoksharma88_gmail_com"
            android:textColor="@color/text5"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/profile_img"
            android:fontFamily="@font/lato"
            android:text="@string/phone_no"
            android:textColor="@color/text5"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/notification_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_layout"
        android:background="@drawable/setting_menu_bkg"
        android:elevation="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/notification_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notifications"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/notifications"
            android:layout_toEndOf="@id/notification_ic"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:textColor="@color/text4"
            android:textSize="20sp"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/general_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_layout"
        android:background="@drawable/setting_menu_bkg"
        android:elevation="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/setting_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_setting"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/general"
            android:layout_toEndOf="@id/setting_ic"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:textColor="@color/text4"
            android:textSize="20sp"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/account_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/general_layout"
        android:background="@drawable/setting_menu_bkg"
        android:elevation="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/account"
            android:layout_toEndOf="@id/account"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:textColor="@color/text4"
            android:textSize="20sp"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/bank_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_layout"
        android:background="@drawable/setting_menu_bkg"
        android:elevation="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/bank_details"
            android:layout_toEndOf="@id/lock"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:textColor="@color/text4"
            android:textSize="20sp"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/kyc_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bank_layout"
        android:background="@drawable/setting_menu_bkg"
        android:elevation="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/kyc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_kyc"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/kyc"
            android:layout_toEndOf="@id/kyc"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:textColor="@color/text4"
            android:textSize="20sp"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/help_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kyc_layout"
        android:background="@drawable/setting_menu_bkg"
        android:elevation="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_help"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/help"
            android:layout_toEndOf="@id/help"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:textColor="@color/text4"
            android:textSize="20sp"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/logout"
        android:layout_width="170dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_layout"
        android:background="@drawable/logout_bkg"
        android:elevation="8dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/lato_bold"
            android:padding="10dp"
            android:text="log out"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>