<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.WithdrawBtFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/altus"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="-50dp"
            android:layout_marginTop="-90dp"
            android:src="@drawable/altus"

            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_message_circle"
            app:layout_constraintBottom_toBottomOf="@+id/altus" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ethereum_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:background="@drawable/profile_layout_bkg"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:src="@drawable/ethereum" />

        <TextView
            android:id="@+id/ethereum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/img"
            android:fontFamily="@font/lato_bold"
            android:text="@string/ethereum"
            android:textColor="@color/text1"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ethereum"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/img"
            android:fontFamily="@font/lato_bold"
            android:text="-588$ (22%)"
            android:textColor="@color/red"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/lato_bold"
            android:text="Total mined 0.20 ETH"
            android:textColor="@color/brand_colour"
            android:textSize="16sp" />


    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/withdraw_card"
        android:layout_width="380dp"
        android:layout_height="340dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ethereum_layout"
        app:cardCornerRadius="40dp"
        app:cardBackgroundColor="@color/white"
        android:elevation="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="30dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/rupee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/lato_bold"
                android:text="\u20B9 423.00"
                android:textColor="@color/brand_colour"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/withdraw_tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rupee"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/lato"
                android:text="@string/total_withdrawable_amount"
                android:textColor="@color/text5"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/eth_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_below="@id/withdraw_tx"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ethereum" />

            <TextView
                android:id="@+id/eth_to_inr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/withdraw_tx"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/eth_img"
                android:fontFamily="@font/lato_bold"
                android:text="ETH to INR"
                android:textColor="@color/green"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/expected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eth_to_inr"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:layout_toEndOf="@id/eth_img"
                android:fontFamily="@font/lato_bold"
                android:text="Expected deposit date"
                android:textColor="@color/brand_colour"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="— 1/02/2022"
                android:fontFamily="@font/lato"
                android:textColor="@color/brand_colour"
                android:layout_toEndOf="@id/expected"
                android:layout_below="@id/eth_to_inr"
                android:layout_marginTop="7dp"
                android:layout_marginStart="5dp"/>

            <RelativeLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/expected"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/search_bkg"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/rupee_ic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_rupee" />

                <View
                    android:id="@+id/line"
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/rupee_ic"
                    android:background="@color/text4"

                    />

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/line"
                    android:fontFamily="@font/lato"
                    android:hint="Enter amount to withdraw..."
                    android:includeFontPadding="true"
                    android:inputType="text"
                    android:background="@null"
                    android:textColor="@color/text4" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/withdraw_btn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/withdraw_bkg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/lato_bold"
                    android:padding="10dp"
                    android:text="@string/withdraw"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/decline_bkg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/lato_bold"
                    android:padding="10dp"
                    android:text="@string/decline"
                    android:textAllCaps="true"
                    android:textColor="@color/brand_colour" />

            </RelativeLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/pattern_bottom"
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:src="@drawable/pattern_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="-170dp"
        android:layout_marginBottom="-120dp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>